just making mess

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,29 @@
 local
 .project
-
 .DS_Store
+
+.idea/.name
+
+.idea/dictionaries/amit.xml
+
+.idea/encodings.xml
+
+.idea/genjs.iml
+
+.idea/jsLibraryMappings.xml
+
+.idea/jsLinters/jslint.xml
+
+.idea/libraries/Ext4.xml
+
+.idea/libraries/sass_stdlib.xml
+
+.idea/misc.xml
+
+.idea/modules.xml
+
+.idea/scopes/scope_settings.xml
+
+.idea/vcs.xml
+
+.idea/workspace.xml
